# tcp-server-liburing

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.cpp  server.cpp  server.hpp
liburing/: config-host.h  config-host.mak
liburing/examples/: io_uring-close-test  io_uring-cp  io_uring-test  io_uring-udp  link-cp  poll-bench  rsrc-update-bench  send-zerocopy  ucontext-cp
liburing/src/: ffi.ol  ffi.os  liburing-ffi.so.2.5  liburing.so.2.5  nolibc.ol  nolibc.ol.d  nolibc.os  nolibc.os.d  queue.ol  queue.ol.d  queue.os  queue.os.d  register.ol  register.ol.d  register.os  register.os.d  setup.ol  setup.ol.d  setup.os  setup.os.d  syscall.ol  syscall.ol.d  syscall.os  syscall.os.d  version.ol  version.os
liburing/test/: 232c93d07b74.t  35fa71a030ca.t  500f9fbadef8.t  7ad0e4b2f83c.t  8a9973408177.t  917257daa0fe.t  a0908ae19763.t  a4c0b3decb33.t  accept-link.t  accept-reuse.t  accept-test.t  accept.t  across-fork.t  b19062a56726.t  b5837bd5311d.t  buf-ring.t  ce593a6c480a.t  close-opath.t  connect-rep.t  connect.t  coredump.t  cq-full.t  cq-overflow.t  cq-peek-batch.t  cq-ready.t  cq-size.t  d4ae271dfaae.t  d77a67ed5f27.t  defer-taskrun.t  defer.t  double-poll-crash.t  drop-submit.t  eeed8b54e0df.t  empty-eownerdead.t  eploop.t  eventfd-disable.t  eventfd-reg.t  eventfd-ring.t  eventfd.t  evloop.t  (+121 more)
